syntax = "proto3";
package paustq.proto;

enum SessionType {
    PUBLISHER = 0;
    SUBSCRIBER = 1;
}

message Group {
    uint64 group_id = 1;
    uint64 owner_id = 2;
    string group_name = 3;
}

message Partition {
    uint64 partition_id = 1;
    uint64 offset = 2;
}

message Topic {
    string topic_name = 1;
    string topic_meta = 2;
    uint32 num_partitions = 3;
    uint32 replication_factor = 4;
}

message TopicInfo {
    Topic topic = 1;
    uint64 num_publishers = 2;
    uint64 num_subscribers = 3;
    uint64 last_offset = 4;
    repeated Partition partition = 5;
}
